--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,17 +1,18 @@
 ---
 run:
     tests: false
+    modules-download-mode: readonly
     timeout: 240s
-    skip-dirs-use-default: true
     skip-dirs:
         - ^vendor$
-        - ^go/pkg/mod/*
-        - ../../../../go/pkg/mod/*
-        - ../../../../.gobrew/*
         - .*_test\.go$
+        - ./internal
     skip-files:
         - .*\.pb\.go
         - .*_generated\.go
+        - marshal.go
+        - builder.go
+        - dagger.gen.go
 linters-settings:
     depguard:
         rules:
@@ -78,28 +79,16 @@ issues:
     exclude-rules:
         - linters:
               - typecheck
-          text: could not import github.com/Excoriate/go-terradagger/pkg/config
-        - linters:
-              - typecheck
           text: unicode/utf8
         - linters:
               - gosec
           text: G306
-    # This is just a warning, not an error, and it's safe for the
-    # due to the 'root' command is adding a bunch of flags, and options
-    # but none of those or the length of the function is a problem, nor
-    # a cognitive-complexity issue. See the function: addPersistentFlagsToRootCMD()
         - linters:
               - funlen
           path: cmd/root\.go
         - linters:
               - gosec
           text: G404
-    # This is just a warning, not an error, and it's safe for the
-    # function RunCommand to run commands with a variable number of arguments
-    # since most of the time, it should be used by known commands.
-    # See: https://github.com/Excoriate/gitbuster/blob/
-    # main/pkg/utils/commands.go#L28-L28
         - path: utils/commands\.go
           linters:
               - gosec
