feat: Add tg init, add reusable functions

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -6,7 +6,7 @@ run:
     skip-dirs:
         - ^vendor$
         - .*_test\.go$
-        - ./internal
+        - ^internal$
     skip-files:
         - .*\.pb\.go
         - .*_generated\.go
