--- a/taskfiles/Taskfile.dagger.yml
+++ b/taskfiles/Taskfile.dagger.yml
@@ -1,12 +1,26 @@
 ---
 version: '3'
+vars:
+    module:
+    function:
 tasks:
     sync:
         desc: Run Dagger Sync in the target module
         cmds:
-            - dagger mod sync -m .
+            - dagger mod sync -m {{.module}}
 
     publish:
         desc: Run Dagger Publish in the target module
         cmds:
             - dagger mod publish -m {{.module}}
+
+    list-functions:
+        desc: List all the functions in the target module
+        cmds:
+            - dagger functions -m {{.module}}
+
+    call:
+        desc: Call a function in the target module
+        dir: '{{.module}}'
+        cmds:
+            - dagger call {{.function}} {{.CLI_ARGS}}
