--- a/.github/workflows/go-ci-lint.yaml
+++ b/.github/workflows/go-ci-lint.yaml
@@ -24,9 +24,11 @@ jobs:
               with:
                   go-version: ${{ env.GO_VERSION }}
                   cache: false
+            - name: Change working directory
+              run: cd {{ matrix.dagger-module }}
             - name: golangci-lint
               uses: golangci/golangci-lint-action@v3
               with:
                   version: v1.54
-                  args: --config .golangci.yml ./{{ matrix.dagger-module }}
+                  args: --config ../.golangci.yml ./{{ matrix.dagger-module }}
                   github-token: ${{ secrets.GITHUB_TOKEN }}
