fix: update sync task to use 'dagger develop' instead of 'dagger mod sync -m' command

--- a/taskfiles/Taskfile.dagger.yml
+++ b/taskfiles/Taskfile.dagger.yml
@@ -7,7 +7,7 @@ tasks:
     sync:
         desc: Run Dagger Sync in the target module
         cmds:
-            - dagger mod sync -m {{.module}}
+            - cd {{.module}} && dagger develop
 
     publish:
         desc: Run Dagger Publish in the target module
