--- a/taskfiles/Taskfile.go.yml
+++ b/taskfiles/Taskfile.go.yml
@@ -1,7 +1,8 @@
 ---
 version: '3'
 vars:
-    GOLANGCI_LINT_CONFIG_FILE: '{{default ".golangci.yml" .GOLANGCI_LINT_CONFIG_FILE}}'
+    GOLANGCI_LINT_CONFIG_FILE: '{{default "../../.golangci.yml" .GOLANGCI_LINT_CONFIG_FILE}}'
+    mod: '{{default "." .mod}}'
 tasks:
     inspect-workdir:
         desc: Inspect working directory
@@ -22,30 +23,30 @@ tasks:
     go-tidy:
         desc: Tidy go modules
         cmds:
-            - go mod tidy
+            - cd {{.mod}} && go mod tidy
     go-fmt:
         desc: Run go fmt against code
         cmds:
-            - go fmt -x ./...
+            - cd {{.mod}} && go fmt -x ./...
     go-vet:
         desc: Run go vet against code
         cmds:
-            - go vet ./...
+            - cd {{.mod}} && go vet ./...
     go-lint:
         desc: Run go lint against code
         cmds:
-            - golangci-lint run -v -E gofmt --config {{.GOLANGCI_LINT_CONFIG_FILE}}
+            - cd {{.mod}} && golangci-lint run -v -E gofmt --config {{.GOLANGCI_LINT_CONFIG_FILE}}
     go-style:
         desc: Code style -> fmt,vet,lint
         deps: [go-fmt, go-vet, go-lint]
     go-test:
         desc: Run unit test-data
         cmds:
-            - go test -race -v ./...
+            - cd {{.mod}} && go test -race -v ./...
     go-test-nocache:
         desc: Run unit test without cache
         cmds:
-            - go test ./... -count=1 -v
+            - cd {{.mod}} && go test ./... -count=1 -v
     go-ci:
         desc: Run all the test-data and code checks
         cmds:
