--- a/.github/workflows/go-ci-lint.yaml
+++ b/.github/workflows/go-ci-lint.yaml
@@ -14,7 +14,7 @@ jobs:
         strategy:
             matrix:
                 dagger-module:
-                    - iac-terragrunt
+                    - terraform/dagger
         env:
             GO_VERSION: ~1.21
         steps:
