--- a/.github/workflows/go-ci-lint.yaml
+++ b/.github/workflows/go-ci-lint.yaml
@@ -25,7 +25,7 @@ jobs:
                   go-version: ${{ env.GO_VERSION }}
                   cache: false
             - name: Change working directory
-              run: cd {{ matrix.dagger-module }}
+              run: cd ${{ matrix.dagger-module }}
             - name: golangci-lint
               uses: golangci/golangci-lint-action@v3
               with:
