--- a/.github/workflows/markdown-link-check.yml
+++ b/.github/workflows/markdown-link-check.yml
@@ -20,7 +20,7 @@ jobs:
             - uses: gaurav-nelson/github-action-markdown-link-check@v1
               with:
                   check-modified-files-only: yes
-                  config-file: .md-link-check.json
+                  config-file: .markdown-link-check.json
               if: env.GIT_DIFF
     markdown-link-check-on-push-or-workflow_dispatch:
         if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
