--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 ---
 repos:
     - repo: https://github.com/adrienverge/yamllint.git
-      rev: v1.33.0
+      rev: v1.35.1
       hooks:
           - id: yamllint
 
@@ -39,7 +39,7 @@ repos:
           - id: shellcheck
 
     - repo: https://github.com/mineiros-io/pre-commit-hooks
-      rev: v0.5.0
+      rev: v0.5.1
       hooks:
           - id: terraform-fmt
             files: .+\.tf$
@@ -55,10 +55,10 @@ repos:
             files: .+\.go$
 
     - repo: https://github.com/igorshubovych/markdownlint-cli
-      rev: v0.38.0
+      rev: v0.39.0
       hooks:
           - id: markdownlint
-            args: [--fix]
+            args: [--fix, .]
 
     - repo: https://github.com/tcort/markdown-link-check
       rev: v3.11.2
