--- a/.github/workflows/go-ci-lint.yaml
+++ b/.github/workflows/go-ci-lint.yaml
@@ -30,5 +30,5 @@ jobs:
               uses: golangci/golangci-lint-action@v3
               with:
                   version: v1.54
-                  args: --config ../.golangci.yml ./${{ matrix.dagger-module }}
+                  args: --config ../../.golangci.yml ./${{ matrix.dagger-module }}
                   github-token: ${{ secrets.GITHUB_TOKEN }}
