--- a/.github/workflows/go-ci-lint.yaml
+++ b/.github/workflows/go-ci-lint.yaml
@@ -8,27 +8,24 @@ permissions:
     contents: read
     pull-requests: read
 jobs:
-    golangci:
-        name: Golangci-lint
+    golangci-lint:
         runs-on: ubuntu-latest
+
         strategy:
+            fail-fast: false
             matrix:
-                dagger-module:
-                    - terraform/dagger
-        env:
-            GO_VERSION: ~1.21
+                workdir: [terraform/dagger]
+
         steps:
-            - uses: actions/checkout@v3
+            - name: Check out code
+              uses: actions/checkout@v3
+
             - name: Set up Go
               uses: actions/setup-go@v4
               with:
-                  go-version: ${{ env.GO_VERSION }}
-                  cache: false
-            - name: Change working directory
-              run: cd ${{ matrix.dagger-module }}
+                  go-version: 1.21
+
             - name: golangci-lint
-              uses: golangci/golangci-lint-action@v3
+              uses: reviewdog/action-golangci-lint@v2
               with:
-                  version: v1.54
-                  args: --config ../../.golangci.yml ./${{ matrix.dagger-module }}
-                  github-token: ${{ secrets.GITHUB_TOKEN }}
+                  workdir: ${{ matrix.workdir }}
