feat: Update labeler configuration with new rules
Update the labeler configuration to include new rules for file changes,
such as any-glob-to-any-file and head-branch. Also, updated rules for
infrastructure and source files. Refactored ci/cd rule to support
changed-files with specific paths.

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,30 +1,29 @@
----
-ci/cd:
-    - .github/workflows/*
+root:
+  - changed-files:
+      - any-glob-to-any-file: '*'
+
+AnyChange:
+  - changed-files:
+      - any-glob-to-any-file: '**'
+
+Documentation:
+  - changed-files:
+      - any-glob-to-any-file: '**/*.md'
+
+feature:
+  - head-branch: ['^feature', 'feature']
+
 infrastructure:
-    - terraform/**
-    - infra/**
-    - modules/**
-    - terragrunt/**
-documentation:
-    - README.md
-    - .github/ISSUE_TEMPLATE/*
-    - ./*.md
-patch:
-    - TaskFile.yml
-    - LICENSE
-    - .github/labeler.yml
-    - .yamllint.yml
-    - .Makefile
-    - .pre-commit-config.yaml
-    - .goreleaser.yml
-    - .github/settings.yml
-    - .github/dependabot.yml
-    - .gitignore
-    - .gitattributes
-    - .shellcheckrc
-    - .editorconfig
-    - .dockerignore
-minor:
-    - pkg/*
-    - cli/*
+  - head-branch: ['^infrastructure', 'infrastructure']
+  - changed-files:
+      - any-glob-to-any-file: ['**/*.tf', '**/*.tfvars', '**/*.hcl']
+
+release:
+  - base-branch: 'main'
+
+source:
+    - changed-files:
+        - any-glob-to-any-file: '**/*.go'
+ci/cd:
+  - changed-files:
+      - any-glob-to-any-file: ['**/.github/workflows/*', '**/.gitlab-ci.yml']
