--- a/.github/workflows/labels-assigner.yml
+++ b/.github/workflows/labels-assigner.yml
@@ -6,11 +6,14 @@ on:
 defaults:
     run:
         shell: bash
+permissions:
+  contents: read
+  pull-requests: write
 jobs:
     triage:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/labeler@v3
+            - uses: actions/labeler@v5
               with:
                   repo-token: ${{ secrets.GITHUB_TOKEN }}
     size-label:
