build: set working directory for linter job to fix path issue

--- a/.github/workflows/go-ci-lint.yaml
+++ b/.github/workflows/go-ci-lint.yaml
@@ -34,3 +34,4 @@ jobs:
                   version: v1.54
                   args: --config ../../.golangci.yml
                   github-token: ${{ secrets.GITHUB_TOKEN }}
+              working-directory: ${{ matrix.workdir }}
