--- a/.github/workflows/go-ci-lint.yaml
+++ b/.github/workflows/go-ci-lint.yaml
@@ -1,37 +1,40 @@
 ---
-name: Go Linter
+name: Go lint
 on:
-    workflow_dispatch:
-    push:
-    pull_request:
-permissions:
-    contents: read
-    pull-requests: read
-jobs:
-    golangci-lint:
-        runs-on: ubuntu-latest
+  push:
+    branches:
+      - main
+      - master
+  pull_request:
 
-        strategy:
-            fail-fast: false
-            matrix:
-                workdir:
-                    - terraform/dagger
-                    - goreleaser/dagger
-                    - gitlab/cicd-vars/dagger
-                    - terratest/dagger
-        env:
-            GO_VERSION: ~1.22
-        steps:
-            - uses: actions/checkout@v3
-            - name: Set up Go
-              uses: actions/setup-go@v4
-              with:
-                  go-version: ${{ env.GO_VERSION }}
-                  cache: false
-            - name: golangci-lint
-              uses: golangci/golangci-lint-action@v3
-              with:
-                  version: v1.54
-                  args: --config ../../.golangci.yml
-                  github-token: ${{ secrets.GITHUB_TOKEN }}
-              working-directory: ${{ matrix.workdir }}
+permissions:
+  contents: read
+  pull-requests: read
+  checks: write
+
+jobs:
+  golangci:
+    strategy:
+      matrix:
+        go: ['1.22']
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        module: [gotest]
+    name: Lint ${{ matrix.module }} on ${{ matrix.os }} with Go ${{ matrix.go }}
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ matrix.go }}
+      - name: Set up module
+        run: cd ${{ matrix.module }}
+      - name: golangci-lint on Dagger module
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.58
+          working-directory: ${{ matrix.module }}/dagger
+      - name: golangci-lint on Dagger test module
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.58
+          working-directory: ${{ matrix.module }}/tests/dagger
