--- a/.github/workflows/go-ci-lint.yaml
+++ b/.github/workflows/go-ci-lint.yaml
@@ -20,7 +20,7 @@ jobs:
         dagversion: [0.11.6, 0.11.7]
         module: [gotest]
     name: Lint ${{ matrix.module }} on ${{ matrix.os }} with Go ${{ matrix.go }}
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
