ci: Update Dagger Modules Lint workflow for testing module with Dagger.

--- a/.github/workflows/mod-gotest-ci-linter.yaml
+++ b/.github/workflows/mod-gotest-ci-linter.yaml
@@ -1,5 +1,5 @@
 ---
-name: Dagger Modules Lint
+name: Module Gotest CI Linter
 on:
   push:
     branches:
@@ -14,7 +14,7 @@ permissions:
   checks: write
 
 jobs:
-  golangci:
+  linter:
     strategy:
       matrix:
         go: ['1.22']
