--- a/.github/workflows/mod-gotest-ci-tests.yaml
+++ b/.github/workflows/mod-gotest-ci-tests.yaml
@@ -1,5 +1,5 @@
 ---
-name: Dagger Modules Lint
+name: Module Gotest CI Tests
 on:
   push:
     branches:
@@ -14,20 +14,20 @@ permissions:
   checks: write
 
 jobs:
-  golangci:
+  module-test:
     strategy:
       matrix:
         go: ['1.22']
         dagversion: [0.11.6, 0.11.7]
         module: [gotest]
-    name: Lint ${{ matrix.module }} on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+    name: Run Tests 🧪 in ${{ matrix.module }} on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go }}
-      - name: Dagger Develop
+      - name: Dagger Develop on Module 📦 ${{ matrix.module }} with Dagger ${{ matrix.dagversion }}
         uses: dagger/dagger-for-github@v5
         with:
           verb: develop
@@ -35,24 +35,20 @@ jobs:
           version: ${{ matrix.dagversion }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Dagger Call
+      - name: Dagger Develop on Test Module 🧪 ${{ matrix.module }} with Dagger ${{ matrix.dagversion }}
         uses: dagger/dagger-for-github@v5
         with:
-          verb: call
-          module: ${{ matrix.module }}
+          verb: develop
+          module: ${{ matrix.module }}/tests
           version: ${{ matrix.dagversion }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Setup GolangCI-Lint
-        run: cd ${{ matrix.module }}
-      - name: Run golangci-lint on module ${{ matrix.module }}
-        uses: golangci/golangci-lint-action@v6
+      - name: Running Tests 💣 in ${{ matrix.module }} on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v5
         with:
-          version: v1.58
-          working-directory: ${{ matrix.module }}/dagger
-      - name: Run golangci-lint on module ${{ matrix.module }}/tests
-        uses: golangci/golangci-lint-action@v6
-        with:
-          version: v1.58
-          working-directory: ${{ matrix.module }}/tests/dagger
-          args: --config=${{ github.workspace }}/.golangci.yml
+          verb: call
+          args: test-all
+          module: ${{ matrix.module }}/tests
+          version: ${{ matrix.dagversion }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
