--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,29 +1,73 @@
 ---
-name: Release
+name: Release Module 🚀
 on:
-    push:
-        branches:
-            - main
-            - '[0-9]+.[0-9]+.x'
-    workflow_dispatch:
+  push:
+    branches:
+      - main
+      - master
+  workflow_dispatch:
+
 defaults:
-    run:
-        shell: bash
+  run:
+    shell: bash
+
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
-    release-please:
-        permissions:
-            contents: write
-            pull-requests: write
-        runs-on: ubuntu-latest
-        outputs:
-            releases_created: ${{ steps.release.outputs.releases_created }}
-            tag_name: ${{ steps.release.outputs.tag_name }}
-        steps:
-            - name: Checkout
-              uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3 # v3
-            - uses: google-github-actions/release-please-action@ee9822ec2c397e8a364d634464339ac43a06e042
-              id: release
-              with:
-                  command: manifest
-                  token: ${{secrets.GITHUB_TOKEN}}
-                  default-branch: main
+  release-please:
+    permissions:
+      contents: write
+      pull-requests: write
+    runs-on: ubuntu-latest
+    outputs:
+      releases_created: ${{ steps.release.outputs.releases_created }}
+      tag_name: ${{ steps.release.outputs.tag_name }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Release Please
+        uses: googleapis/release-please-action@v4
+        id: release
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          default-branch: main
+          release-type: go
+          command: manifest
+
+  publish-in-daggerverse:
+    needs: release-please
+    runs-on: ubuntu-latest
+    env:
+      GO_VERSION: ~1.22
+      DAG_VERSION: 0.11.7
+    strategy:
+      matrix:
+        module: [gotest]
+    name: Publishing ${{ matrix.module }} in the Daggerverse 🚀
+    if: ${{ needs.release-please.outputs.releases_created }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: ${{ env.GO_VERSION }}
+      - name: Dagger Develop on Module 📦 ${{ matrix.module }} with Dagger ${{ env.DAG_VERSION }}
+        uses: dagger/dagger-for-github@v5
+        with:
+          verb: develop
+          module: ${{ matrix.module }}
+          version: ${{ env.DAG_VERSION }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publishing ${{ matrix.module }} in the Daggerverse 🚀
+        uses: dagger/dagger-for-github@v5
+        with:
+          verb: publish
+          module: ${{ matrix.module }}
+          version: ${{ env.DAG_VERSION }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
