--- a/.daggerx/daggy/Cargo.toml
+++ b/.daggerx/daggy/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.7", features = ["derive"] }
 serde = { version = "1.0.203", features = ["derive"] }
+regex = "1.10.5"
