--- a/.github/workflows/mod-module-example-ci.yaml
+++ b/.github/workflows/mod-module-example-ci.yaml
@@ -110,7 +110,7 @@ jobs:
             matrix:
                 go: ['1.22']
                 dagversion: [0.11.6, 0.11.7]
-        needs: linter
+        needs: [linter, golangci-lint]
         name: Run Tests 🧪 in module-example on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
         steps:
